--- a/templates/select.html
+++ b/templates/select.html
@@ -153,7 +153,7 @@
       <div class="login-header">Committee Member Login</div>
       
       <input type="text" placeholder="Enter Code" />
-      <button class="login-button" onclick="moderator() id="Code">Login</button>
+      <button class="login-button" onclick="moderator()" id="Code">Login</button>
     </div>
   </div>
 
