--- a/templates/select.html
+++ b/templates/select.html
@@ -152,8 +152,8 @@
     <div class="box">
       <div class="login-header">Committee Member Login</div>
       
-      <input type="text" placeholder="Enter Code" />
-      <button class="login-button" onclick="moderator()" id="Code">Login</button>
+      <input type="text" placeholder="Enter Code" id="Code"/>
+      <button class="login-button" onclick="moderator()">Login</button>
     </div>
   </div>
 
