--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -245,7 +245,7 @@
       </div>
 
       <div class="extra">
-        <button type="submit">Back to Moderator Page</button>
+        <button type="submit" onclick="uploadFiles()">Back to Moderator Page</button>
       </div>
     </form>
   </div>
