--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@ document.getElementById("Username").addEventListener("keydown", function(event) 
             window.location.href = "/seniorQuestionnaire";
           }
           if (data.class==="Junior") {
-            window.location.href = "/select";
+            window.location.href = "/juniorQuestionnaire";
           }
         }
         // else maybe redirect to user page or display error
