--- a/templates/REALseniorQuestionnaire.html
+++ b/templates/REALseniorQuestionnaire.html
@@ -339,6 +339,7 @@ Enter here
     </div>
          
    	<p>Select Availability</p>
+	<p>NOTE: You should be available for ALL the given times. If you have any scheduling conflicts, please indicate them below</p>
     
     
  <table>
