--- a/templates/juniorQuestionnaire.html
+++ b/templates/juniorQuestionnaire.html
@@ -240,7 +240,7 @@
 <div class="header">
 <h2>Junior Questionnare</h2>
 </div>
-<form>
+<form action="/submit" method="POST">
 	<p>Name:</p>
     	<div class="dropdown">
   			<button class="dropdown-button">Select Option</button>
@@ -328,8 +328,7 @@
    
 </table>
 
-<!--need to update url-->
-<form action="/submit-url" method="post">
+
   
   
   <button type="submit">Submit</button>
